# invmed_rewrite

./: CMakeLists.txt  Makefile  README
cmake/Modules/: .Findpvfmm.cmake.swp  FindMKL.cmake
include/: convert_elemental.hpp  convert_petsc.hpp  funcs.hpp  helm_kernels.hpp  helm_kernels.txx  invmed_tree.hpp  invmed_tree.txx  invmed_utils.hpp  operators.hpp  ops.hpp  petsc_utils.hpp  petsc_utils.txx  point_distribs.hpp  typedefs.hpp
scripts/: .submit_jobs.sh  G_func_test.sh  comp.sh  conv.sh  faims.sh  rmf.sh  run_faims.sh  run_faims_tests.sh  run_invmed.sh  run_test.sh  stampede.sh  test.sh
src/: convert_elemental.cpp  convert_petsc.cpp  funcs.cpp  invmed.cpp  invmed_utils.cpp  invmed_utils.hpp  operators.cpp  ops.cpp  point_distribs.cpp  tags
test/: G_func_test.cpp  Gt_func_test.cpp  dist_test.cpp  faims.cpp  faims_tests.cpp  mat_test.cpp  new_test.cpp  profile_test.cpp  test.cpp
